--- a/index.css
+++ b/index.css
@@ -1,9 +1,13 @@
 body {
-    background-color: '#22BB44'
+    background-color: '#557755'
 }
 
 #content {
     background-color: '#000';
     color: '#FFF';
     width: 80%;
+}
+
+h1 {
+    color: '#ff0'
 }
