updated index.css - different color format

--- a/index.css
+++ b/index.css
@@ -1,13 +1,13 @@
 body {
-    background-color: '#557755'
+    background-color: #557755
 }
 
 #content {
-    background-color: '#000';
-    color: '#FFF';
+    background-color: #000;
+    color: #FFF;
     width: 80%;
 }
 
 h1 {
-    color: '#ff0'
+    color: #ff0
 }
